Bisect uses meters for the plane point #60816

Closed
opened 2019-01-24 13:27:00 +01:00 by David Hill · 14 comments

System Information
Operating system: Windows 10
Graphics card: nVidia 960 GX

Blender Version
Broken: 2.80 Beta, 7f40d553f9, 2019-01-22 01:09
(example: 2.79b release)
(example: 2.80, edbf15d3c0, blender2.8, 2018-11-28, as found on the splash screen)
Worked: (optional)

Short description of error
With units set to "Imperial" and inches, while using Bisect, the units on the plane point are in meters.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).
Set units to Imperial and inches. Bisect a model. To alter the plane point, inches have to be converted to meters for correct results.

**System Information** Operating system: Windows 10 Graphics card: nVidia 960 GX **Blender Version** Broken: 2.80 Beta, 7f40d553f903, 2019-01-22 01:09 (example: 2.79b release) (example: 2.80, edbf15d3c044, blender2.8, 2018-11-28, as found on the splash screen) Worked: (optional) **Short description of error** With units set to "Imperial" and inches, while using Bisect, the units on the plane point are in meters. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). Set units to Imperial and inches. Bisect a model. To alter the plane point, inches have to be converted to meters for correct results.
Author

Added subscriber: @davidwhill

Added subscriber: @davidwhill
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

It uses Blender units to be precise, but yes, the unit should be the one selected in the Units panel.
Checking...

It uses Blender units to be precise, but yes, the unit should be the one selected in the Units panel. Checking...
Jacques Lucke self-assigned this 2019-01-24 15:16:57 +01:00

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

@JacquesLucke FYI, there are a few other operators that still use Blender Units.

For example:

  • Bevel Amount
  • Randomize Amount

Probably there are more

There are also properties that should be made aware of units still, such as:

Force Fields:

  • field.distance_min
  • field.distance_max
  • field.radial_min
  • field.radial_max

Particles:

  • root_radius
  • tip_radius
  • mass

Cloth:

  • modifiers["Cloth"].settings.mass

Softbody:

  • modifiers["Softbody"].settings.mass
@JacquesLucke FYI, there are a few other operators that still use Blender Units. For example: - Bevel Amount - Randomize Amount Probably there are more There are also properties that should be made aware of units still, such as: Force Fields: - field.distance_min - field.distance_max - field.radial_min - field.radial_max Particles: - root_radius - tip_radius - mass Cloth: - modifiers["Cloth"].settings.mass Softbody: - modifiers["Softbody"].settings.mass
Member

Started fixing those here: D4248

@WilliamReynish: Feel free to create a new task for that and assign me.

Started fixing those here: [D4248](https://archive.blender.org/developer/D4248) @WilliamReynish: Feel free to create a new task for that and assign me.

@JacquesLucke Ok, will do :)

@JacquesLucke Ok, will do :)

Added subscriber: @brecht

Added subscriber: @brecht

Note "Bevel Amount" depends is not always a distance, see b786416.

Note "Bevel Amount" depends is not always a distance, see b786416.

This issue was referenced by 6b5416909e

This issue was referenced by 6b5416909ef4f2e833ee9527bf1219d266ace99d
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

@JacquesLucke I've tried to make a comprehensive list here: #60824

@JacquesLucke I've tried to make a comprehensive list here: #60824
Member

I could not not notice it haha (notifications)
Thanks :)

I could not not notice it haha (notifications) Thanks :)

@brecht Hmm grumble grumble. You are right. We are using the same property to mean a percentage and length in different cases for that one. Really I suppose we should make them two independent properties, and show the correct ones when applicable?

@brecht Hmm grumble grumble. You are right. We are using the same property to mean a percentage and length in different cases for that one. Really I suppose we should make them two independent properties, and show the correct ones when applicable?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60816
No description provided.