Fix T60816: Specify subtype for some properties of mesh operators

Reviewers: brecht

Differential Revision: https://developer.blender.org/D4248