source/blender/editors/mesh/editmesh_extrude_spin.c
@@ -208,8 +208,8 @@ void MESH_OT_spin(wmOperatorType *ot)
 	RNA_def_boolean(ot->srna, "use_auto_merge", true, "Auto Merge", "Merge first/last when the angle is a full revolution");
 	RNA_def_boolean(ot->srna, "use_normal_flip", 0, "Flip Normals", "");
 
-	RNA_def_float_vector(ot->srna, "center", 3, NULL, -1e12f, 1e12f,
-	                     "Center", "Center in global view space", -1e4f, 1e4f);
+	RNA_def_float_vector_xyz(ot->srna, "center", 3, NULL, -1e12f, 1e12f,
+	                         "Center", "Center in global view space", -1e4f, 1e4f);
 	RNA_def_float_vector(ot->srna, "axis", 3, NULL, -1.0f, 1.0f, "Axis", "Axis in global view space", -1.0f, 1.0f);
 
 	WM_gizmogrouptype_append(MESH_GGT_spin);
